# ndkDemo

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wmdming/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mylog.cpp  native-lib.cpp  test.cpp  utils.cpp
app/src/main/cpp/include/: native-lib.h  test.h  utils.h
app/src/main/cpp/utils/: data_utils.cpp
app/src/main/cpp/utils/include/: data_utils.h
app/src/main/java/com/wmdming/ndkdemo/: CCallJava.java  CmdResult.java  JavaCallC.java  MainActivity.java  User.java
app/src/test/java/com/wmdming/ndkdemo/: ExampleUnitTest.java
doc/: 动态库静态库等学习记录.md
gradle/wrapper/: gradle-wrapper.properties
myndk/: README.md  build.gradle
myndk/src/androidTest/java/com/wmding/myndk/: ExampleInstrumentedTest.java
myndk/src/main/: AndroidManifest.xml
myndk/src/main/cpp/: CMakeLists.txt  my.cpp
myndk/src/main/java/com/wmding/myndk/: MainActivity.java
myndk/src/test/java/com/wmding/myndk/: ExampleUnitTest.java
myndk2/: README.md  build.gradle
myndk2/src/androidTest/java/com/wmding/myndk3/: ExampleInstrumentedTest.java
myndk2/src/main/: AndroidManifest.xml
myndk2/src/main/cpp/: CMakeLists.txt  native-lib.cpp
myndk2/src/main/cpp/include/: my.h
myndk2/src/main/java/com/wmding/myndk3/: MainActivity.java
myndk2/src/main/res/values/: strings.xml
myndk2/src/test/java/com/wmding/myndk3/: ExampleUnitTest.java
myndk3/: README.md  build.gradle
myndk3/src/androidTest/java/com/wmding/myndk2/: ExampleInstrumentedTest.java
myndk3/src/main/: AndroidManifest.xml
myndk3/src/main/cpp/: CMakeLists.txt  native-lib.cpp
myndk3/src/main/java/com/wmding/myndk2/: MainActivity.java
myndk3/src/main/res/values/: strings.xml
myndk3/src/test/java/com/wmding/myndk2/: ExampleUnitTest.java
